Modificado color de la navbar, ajustados algunos espacios en la página Rutas

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
 
     <!-- Carousel Home-->
-    <div id="carouselEverest" class="carousel slide" data-ride="carousel">
+    <div id="carouselEverest" class="carousel slide" data-ride="carousel" data-pause="hover" data-interval="4000">
         <ol class="carousel-indicators">
             <li data-target="#carouselEverest" data-slide-to="0" class="active"></li>
             <li data-target="#carouselEverest" data-slide-to="1"></li>
