--- a/rutas.html
+++ b/rutas.html
@@ -50,29 +50,42 @@
         </nav>
     </header>
 
-    <div id="route-everest" class="container">
-        <div class="row">
-            <div class="col-xl-6">
-                <img src="img/routes/ruta-everest.png" class="img-fluid" alt="Rutas Everest">
-            </div>
-            <div class="col-xl-6">
-                <h2>Campamentos base en el monte Everest</h2>
-                <p>Para cualquiera que se atreva a subir al Everest hay, como ya se ha dicho, dos alternativas: o vas a
-                    China, o conquistas la montaña gigante desde el lado nepalí de la misma. Con el fin de acostumbrarse
-                    a las condiciones climáticas específicas a una altura tan elevada, existen dos campamentos base en
-                    los que todo el mundo (cualquier turista que tenga pensado seguir subiendo) está obligado a visitar
-                    durante un tiempo, para que el cuerpo pueda acostumbrarse a tales condiciones y evitar así el mal de
-                    altura. En ambos campos hay médicos, que pueden asesorar a los escaladores antes del ascenso.
-                    Permanecer durante algún tiempo (según sea necesario) en un campamento base ayuda a los montañeros a
-                    reducir el posible riesgo de problemas de salud relacionados con el cambio de presión y el mal de
-                    altura.</p>
-                <p>El campamento sur está situado en Nepal, mientras que el campamento norte está situado en territorio
-                    del Tíbet (China). A pesar de que en verano se puede llegar al campamento norte en coche, el
-                    campamento sur es cada vez más popular. Y, por supuesto, todos los habitantes de los pueblos de los
-                    alrededores, que antiguamente se dedicaban a la agricultura y a la cría de ganado, están centrados
-                    ahora en proporcionar a los visitantes cualquier cosa que necesiten; pueden ayudar a subir el
-                    equipaje a la montaña, así como ofrecer comida, agua y una gran variedad de productos. Además de los
-                    dos campos mencionados, de camino hacia el Everest hay varios otros, antes y después.</p>
+    <div id="container-route-everest">
+        <div id="route-everest" class="container">
+            <div class="row">
+                <div class="col-xl-6">
+                    <img src="img/routes/ruta-everest.png" class="img-fluid" alt="Rutas Everest">
+                </div>
+                <div class="col-xl-6">
+                    <h2>Campamentos base en el monte Everest</h2>
+                    <p>Para cualquiera que se atreva a subir al Everest hay, como ya se ha dicho, dos alternativas: o
+                        vas a
+                        China, o conquistas la montaña gigante desde el lado nepalí de la misma. Con el fin de
+                        acostumbrarse
+                        a las condiciones climáticas específicas a una altura tan elevada, existen dos campamentos base
+                        en
+                        los que todo el mundo (cualquier turista que tenga pensado seguir subiendo) está obligado a
+                        visitar
+                        durante un tiempo, para que el cuerpo pueda acostumbrarse a tales condiciones y evitar así el
+                        mal de
+                        altura. En ambos campos hay médicos, que pueden asesorar a los escaladores antes del ascenso.
+                        Permanecer durante algún tiempo (según sea necesario) en un campamento base ayuda a los
+                        montañeros a
+                        reducir el posible riesgo de problemas de salud relacionados con el cambio de presión y el mal
+                        de
+                        altura.</p>
+                    <p>El campamento sur está situado en Nepal, mientras que el campamento norte está situado en
+                        territorio
+                        del Tíbet (China). A pesar de que en verano se puede llegar al campamento norte en coche, el
+                        campamento sur es cada vez más popular. Y, por supuesto, todos los habitantes de los pueblos de
+                        los
+                        alrededores, que antiguamente se dedicaban a la agricultura y a la cría de ganado, están
+                        centrados
+                        ahora en proporcionar a los visitantes cualquier cosa que necesiten; pueden ayudar a subir el
+                        equipaje a la montaña, así como ofrecer comida, agua y una gran variedad de productos. Además de
+                        los
+                        dos campos mencionados, de camino hacia el Everest hay varios otros, antes y después.</p>
+                </div>
             </div>
         </div>
     </div>
